No more welcome, now is demo

--- a/src/BBC/BBCBundle/Resources/views/layout.html.twig
+++ b/src/BBC/BBCBundle/Resources/views/layout.html.twig
@@ -8,7 +8,9 @@
 </head>
 <body>
 {% block bodyfirst %}{% endblock %}
-{% block content %}{% endblock %}
+<div class="b-g-p">
+    {% block content %}{% endblock %}
+</div>
 {% block bodylast %}{% endblock %}
 </body>
 </html>
