--- a/src/BBC/BBCBundle/Resources/views/Demo/index.html.twig
+++ b/src/BBC/BBCBundle/Resources/views/Demo/index.html.twig
@@ -1,14 +1,11 @@
-{% extends "AcmeDemoBundle::layout.html.twig" %}
+{% extends 'BBCBundle::layout.html.twig' %}
 
-{% block title "Symfony - Demos" %}
+{% block head %}{{ head | raw }}{% endblock %}
+{% block bodyfirst %}{{ bodyfirst | raw }}{% endblock %}
+{% block bodylast %}{{ bodylast | raw }}{% endblock %}
 
-{% block content_header '' %}
 
+{% block title %}Symfony - Welcome{% endblock %}
 {% block content %}
-    <h1 class="title">Available demos</h1>
-    <ul id="demo-list">
-        <li><a href="{{ path('_demo_hello', {'name': 'World'}) }}">Hello World</a></li>
-        <li><a href="{{ path('_demo_secured_hello', {'name': 'World'}) }}">Access the secured area</a> <a href="{{ path('_demo_login') }}">Go to the login page</a></li>
-        {# <li><a href="{{ path('_demo_contact') }}">Send a Message</a></li> #}
-    </ul>
+    <h1 class="title">Welcome BBC Peeps!</h1>
 {% endblock %}
