--- a/src/BBC/BBCBundle/Resources/views/Demo/index.html.twig
+++ b/src/BBC/BBCBundle/Resources/views/Demo/index.html.twig
@@ -7,24 +7,25 @@
 
 {% block title %}Symfony - Welcome{% endblock %}
 {% block content %}
-    <h1 class="title">Welcome BBC Peeps!</h1>
+    <h1 class="jumbo">Welcome BBC Peeps!</h1>
 
-    <h2>Schedules for services</h2>
+    <h1>Schedules for TV services</h1>
+    <img src="http://www.bubblews.com/assets/images/news/1631598340_1376996881.jpg" width="400px"/>
     <ul class="services">
-      {% for service in services %}
-        <li>
-            <a href="{{ url('_schedule', {'service':service.id})}}">{{ service.id }}</a>
-        </li>
+      {% for service in tv_services %}
+        <a href="{{ url('_schedule', {'service':service.id})}}">
+            <li> {{ service.name }} </li>
+        </a>
       {% endfor %}
     </ul>
 
-    <ul class="pages">
-        <li>
-            <a href="{{ url('_services')}}">BBC and radio services</a>
-        </li>
-        <li>
-            <a href="{{ url('_schedule', {'service':'bbc_one'})}}">Schedule</a>
-        </li>
+    <h1>Schedules for Radio services</h1>
+    <img src="http://www.studentradioalumni.com/wp-content/uploads/2011/05/pure-digital-radio.jpg" width="400px"/>
+    <ul class="services">
+      {% for service in radio_services %}
+        <a href="{{ url('_schedule', {'service':service.id})}}">
+            <li> {{ service.name }} </li>
+        </a>
+      {% endfor %}
     </ul>
-
 {% endblock %}
