--- a/src/BBC/BBCBundle/Resources/views/layout.html.twig
+++ b/src/BBC/BBCBundle/Resources/views/layout.html.twig
@@ -3,6 +3,10 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>{% block title 'Demo Bundle' %}</title>
+    {% stylesheets 'bundles/bbc/css/*' filter='cssrewrite' %}
+        <link rel="stylesheet" href="{{ asset_url }}" />
+    {% endstylesheets %}
+
     {% block head %}
     {% endblock %}
 </head>
