--- a/web/bundles/bbc/css/demo.css
+++ b/web/bundles/bbc/css/demo.css
@@ -8,18 +8,46 @@ h1.jumbo {
     text-align: center;
 }
 
+h1 {
+    text-align: center;
+}
+
 .services {
     list-style: none;
 }
 
 .services li {
     display: inline-table;
-    width: 200px;
+    width: 140px;
     height: 3em;
     box-shadow: 0px 2px 10px rgba(0,0,0,0.3);
-    font-size: 22px;
+    font-size: 20px;
     text-align: center;
-    padding: 20px;
-    margin:20px;
+    padding: 10px;
+    margin:10px 20px;
 }
 
+.row {
+    display: block;
+}
+
+.row::after {
+    content: '';
+    clear: both;
+    display: block;
+}
+
+.span6 {
+    width: 50%;
+    float: left;
+}
+
+figure {
+    height: 350px;
+    position: relative;
+}
+
+figure img {
+    position: absolute;
+    bottom: 0px;
+}
