--- a/src/BBC/BBCBundle/Resources/views/layout.html.twig
+++ b/src/BBC/BBCBundle/Resources/views/layout.html.twig
@@ -1,20 +1,20 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>{% block title 'Demo Bundle' %}</title>
-    {% stylesheets 'bundles/bbc/css/*' filter='cssrewrite' %}
-        <link rel="stylesheet" href="{{ asset_url }}" />
-    {% endstylesheets %}
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8">
+        <title>{% block title 'Demo Bundle' %}</title>
+        {% stylesheets 'bundles/bbc/css/*' filter='cssrewrite' %}
+            <link rel="stylesheet" href="{{ asset_url }}" />
+        {% endstylesheets %}
 
-    {% block head %}
-    {% endblock %}
-</head>
-<body>
-{% block bodyfirst %}{% endblock %}
-<div class="b-g-p">
-    {% block content %}{% endblock %}
-</div>
-{% block bodylast %}{% endblock %}
-</body>
+        {% block head %}
+        {% endblock %}
+    </head>
+    <body>
+    {% block bodyfirst %}{% endblock %}
+    <div id="wrapper" class="b-g-p">
+        {% block content %}{% endblock %}
+    </div>
+    {% block bodylast %}{% endblock %}
+    </body>
 </html>
