--- a/src/BBC/BBCBundle/Resources/views/Demo/schedule.html.twig
+++ b/src/BBC/BBCBundle/Resources/views/Demo/schedule.html.twig
@@ -8,4 +8,29 @@
 {% block title %}SCHEDULE{% endblock %}
 {% block content %}
     <h1 class="title">SCHEDULE</h1>
+
+    <div class="schedule">
+    {% for broadcast in broadcasts %}
+        <div class="row">
+            <div class="span3">
+                <img src="{{ broadcast.image_href }}" alt="IM AN IMAGE">
+            </div>
+            <div class="span6">
+                <a href="/episode/{{ broadcast.ancestors_titles.episode.pid }}">
+                    <span class="brand-title">{{ broadcast.ancestors_titles.brand.title }}</span>
+                    {% if broadcast.ancestors_titles.episode.title is defined %}
+                        :: <span class="episode-title">{{ broadcast.ancestors_titles.episode.title }}</span>
+                    {% endif %}
+                </a>
+            </div>
+            <div class="span3">
+                <span class="broadcast-time">
+                {{ broadcast.start_time|date('g:ia') }}
+                -
+                {{ broadcast.end_time|date('g:ia') }}
+                </span>
+            </div>
+        </div>
+    {% endfor %}
+    </div>
 {% endblock %}
