first commit of episode page gubbins

--- a/src/BBC/BBCBundle/Resources/views/Demo/episode.html.twig
+++ b/src/BBC/BBCBundle/Resources/views/Demo/episode.html.twig
@@ -8,4 +8,5 @@
 {% block title %}EPISODE{% endblock %}
 {% block content %}
     <h1 class="title">EPISODE PAGE</h1>
+    {{episode.pid}}
 {% endblock %}
