--- a/web/bundles/bbc/css/demo.css
+++ b/web/bundles/bbc/css/demo.css
@@ -52,24 +52,28 @@ h1 {
     display: block;
 }
 
+.span1, .span2, .span3, .span4, .span5, .span6,
+.span12, .span7, .span8, .span9, .span10, .span11 {
+    float: left;
+}
 .span1 {
     width: 8.3%;
-    float: left;
 }
 
 .span2 {
     width: 16.6%;
-    float: left;
 }
 
 .span3 {
     width: 25%;
-    float: left;
 }
 
 .span6 {
     width: 50%;
-    float: left;
+}
+
+.span8 {
+    width: 66.6%;
 }
 
 figure {
@@ -92,9 +96,21 @@ select {
 
 /* Schedule */
 .schedule {
+    font-size: 24px;
+}
+.schedule .title, .schedule .time {
+    padding-top: 2em;
+}
+.schedule .time {
+    padding-top: 3em;
+    font-size: 18px;
+    font-style: italic;
+}
+.schedule .row {
+    border: 1px solid #999;
 
 }
 
 .schedule img {
-    width: 300px;
+    width: 150px;
 }
