--- a/web/bundles/bbc/css/demo.css
+++ b/web/bundles/bbc/css/demo.css
@@ -30,16 +30,16 @@ h1 {
 .services li .description {
     display: none;
     position: absolute;
-}
-
-.services li:hover .description {
-    display: block;
     width: 150px;
     font-size: 14px;
     background: white;
     box-shadow: 0px 4px 4px rgba(0,0,0,0.3);
     padding: 5px;
+    margin-left: -10px;
 }
+
+.services li:hover .description {
+    display: block;
 }
 
 .row {
