--- a/src/BBC/BBCBundle/Resources/views/Demo/episode.html.twig
+++ b/src/BBC/BBCBundle/Resources/views/Demo/episode.html.twig
@@ -8,7 +8,11 @@
 {% block title %}EPISODE{% endblock %}
 {% block content %}
     <h1 class="title">EPISODE PAGE</h1>
-    <h2>{{episode.pid}}</h2>
     <h2>{{episode.title}}</h2>
     <img src="{{episode.imageHref}}" />
+    <div>
+        <h3>PID: {{episode.pid}}</h3>
+        <h3>Synopsis:</h3>
+        {{episode.longSynopsis}}
+    </div>
 {% endblock %}
