--- a/src/BBC/BBCBundle/Resources/views/Demo/schedule.html.twig
+++ b/src/BBC/BBCBundle/Resources/views/Demo/schedule.html.twig
@@ -7,7 +7,7 @@
 
 {% block title %}SCHEDULE{% endblock %}
 {% block content %}
-    <h1 class="title">SCHEDULE</h1>
+    <h1 class="title">{{ service.name|upper }} SCHEDULE</h1>
 
     <div class="schedule">
     {% for broadcast in broadcasts %}
