--- a/src/BBC/BBCBundle/Resources/views/Demo/schedule.html.twig
+++ b/src/BBC/BBCBundle/Resources/views/Demo/schedule.html.twig
@@ -38,4 +38,7 @@
         </a>
     {% endfor %}
     </div>
+<div class="back">
+    <a href="{{ url('_welcome')}}">Go back</a>
+</div>
 {% endblock %}
